@@ -2,6 +2,7 @@ Changes in <next release>:
  * Fix transparency with bar plot
  * Add File->Reload menu option to reload from saved document
  * Add tooltip to items in FieldWidget showing widget path
+ * Use getcwdu() for python2 to avoid bugs combining paths
 
 Changes in 1.23.2:
  * Add data clipping dataset plugin
